// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions Body content it should change body content 1`] = `
Object {
  "bodyContent": "Something",
  "contents": Object {},
  "editorMode": "article",
  "title": "",
}
`;

exports[`Actions Reset editor It should remove title and body 1`] = `
Object {
  "bodyContent": "",
  "contents": Object {},
  "editorMode": "article",
  "title": "Some cool title",
}
`;

exports[`Actions Reset editor it should change title 1`] = `
Object {
  "bodyContent": "",
  "contents": Object {},
  "editorMode": "article",
  "title": "Some cool title",
}
`;

exports[`Actions Title it should change title 1`] = `
Object {
  "bodyContent": "",
  "contents": Object {},
  "editorMode": "article",
  "title": "Some cool title",
}
`;

exports[`Actions initial state should match a snapshot 1`] = `
Object {
  "bodyContent": "",
  "contents": Object {},
  "editorMode": "article",
  "title": "",
}
`;
